crates/pcbc/tests/snapshots/route__local_java_not_found.snap
---
source: crates/pcbc/tests/route.rs
assertion_line: 69
expression: output
---
Command: pcbc route board.zen
Exit Code: 1

--- STDOUT ---
  Downloading FreeRouting v2.0.1 (80 MB)...
--- STDERR ---

  Download failed (attempt 1/3), retrying in 2s: error sending request for url (https://github.com/freerouting/freerouting/releases/download/v2.0.1/freerouting-2.0.1.jar)

  Download failed (attempt 2/3), retrying in 4s: error sending request for url (https://github.com/freerouting/freerouting/releases/download/v2.0.1/freerouting-2.0.1.jar)
Error: Download failed after 3 attempts: error sending request for url (https://github.com/freerouting/freerouting/releases/download/v2.0.1/freerouting-2.0.1.jar)
