crates/pcbc/tests/snapshots/route__local_no_layout.snap
---
source: crates/pcbc/tests/route.rs
expression: output
---
Command: pcbc route board.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: No layout path defined in schematic. Add layout="path" to your module.
