crates/pcbc/tests/snapshots/route__missing_file.snap
---
source: crates/pcbc/tests/route.rs
expression: output
---
Command: pcbc route nonexistent.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: File not found: nonexistent.zen
