crates/pcbc/tests/snapshots/route__remote_not_available.snap
---
source: crates/pcbc/tests/route.rs
assertion_line: 109
expression: output
---
Command: pcbc route --remote -t 999 board.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: Cloud routing via DeepPCB is not yet available
